feat: add get category id api
